--- a/page2.html
+++ b/page2.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/w">html5 templates</a></section><section class="mbr-section content4 cid-r61fBdwvEb" id="content4-27">
+<section class="engine"><a href="https://mobiri.se/y">html web templates</a></section><section class="mbr-section content4 cid-r61fBdwvEb" id="content4-27">
 
     
 
