--- a/index.html
+++ b/index.html
@@ -46,17 +46,15 @@
                     <a class="nav-link link text-primary display-4" href="https://mobirise.com">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
                     Try It Now!
-                </a>
-            </div>
+                </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/g">build your own site</a></section><section class="header5 cid-r4L5hf1EhU mbr-fullscreen mbr-parallax-background" id="header5-3">
+<section class="engine"><a href="https://mobiri.se/b">how to create a site for free</a></section><section class="header5 cid-r4L5hf1EhU mbr-fullscreen mbr-parallax-background" id="header5-3">
 
     
 
