--- a/page1.html
+++ b/page1.html
@@ -47,17 +47,15 @@
                     <a class="nav-link link text-primary display-4" href="https://mobirise.com">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
                     Try It Now!
-                </a>
-            </div>
+                </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/k">develop your own website</a></section><section class="mbr-section article content10 cid-r61e91xuFr" id="content10-1y">
+<section class="engine"><a href="https://mobiri.se/o">free portfolio site templates</a></section><section class="mbr-section article content10 cid-r61e91xuFr" id="content10-1y">
     
      
 
