--- a/page2.html
+++ b/page2.html
@@ -46,17 +46,15 @@
                     <a class="nav-link link text-primary display-4" href="https://mobirise.com">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
                     Try It Now!
-                </a>
-            </div>
+                </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/y">html web templates</a></section><section class="mbr-section content4 cid-r61fBdwvEb" id="content4-27">
+<section class="engine"><a href="https://mobiri.se/g">how to build your own website for free</a></section><section class="mbr-section content4 cid-r61fBdwvEb" id="content4-27">
 
     
 
