--- a/page3.html
+++ b/page3.html
@@ -46,17 +46,15 @@
                     <a class="nav-link link text-primary display-4" href="https://mobirise.com">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
                     Try It Now!
-                </a>
-            </div>
+                </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/t">amp template</a></section><section class="mbr-section form4 cid-r61gzoe0Mu" id="form4-2a">
+<section class="engine"><a href="https://mobiri.se/o">portfolio website templates</a></section><section class="mbr-section form4 cid-r61gzoe0Mu" id="form4-2a">
 
     
 
