--- a/page3.html
+++ b/page3.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html" aria-expanded="false">HOME</a></li><li class="nav-item dropdown open"><a class="nav-link link text-primary dropdown-toggle display-4" href="page2.html" aria-expanded="true" data-toggle="dropdown-submenu">WERK</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-4" href="page2.html" aria-expanded="false">grafisch ontwerp</a><a class="text-primary dropdown-item display-4" href="page2.html" aria-expanded="false">tekenen</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle display-4" href="page1.html" aria-expanded="true" data-toggle="dropdown-submenu">ARCHIEF</a><div class="dropdown-menu"><div class="dropdown"><a class="text-primary dropdown-item dropdown-toggle display-4" href="page1.html" aria-expanded="false" data-toggle="dropdown-submenu">fase 1</a><div class="dropdown-menu dropdown-submenu"><a class="text-primary dropdown-item display-4" href="page1.html" aria-expanded="false">grafisch ontwerp</a><a class="text-primary dropdown-item display-4" href="page1.html" aria-expanded="false">tekenen</a></div></div><div class="dropdown"><a class="text-primary dropdown-item dropdown-toggle display-4" href="page1.html" aria-expanded="false" data-toggle="dropdown-submenu">fase 2</a><div class="dropdown-menu dropdown-submenu"><a class="text-primary dropdown-item display-4" href="page1.html" aria-expanded="false">grafisch ontwerp</a><a class="text-primary dropdown-item display-4" href="page1.html" aria-expanded="false">tekenen</a></div></div></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html" aria-expanded="false">CONTACT</a></li><li class="nav-item">
+            <ul class="navbar-nav nav-dropdown navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html" aria-expanded="false">HOME</a></li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle display-4" href="page2.html" aria-expanded="false" data-toggle="dropdown-submenu">WERK</a><div class="dropdown-menu"><a class="text-primary dropdown-item display-4" href="page2.html" aria-expanded="false">grafisch ontwerp</a><a class="text-primary dropdown-item display-4" href="page2.html" aria-expanded="false">tekenen</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle display-4" href="page1.html" aria-expanded="false" data-toggle="dropdown-submenu">ARCHIEF</a><div class="dropdown-menu"><div class="dropdown"><a class="text-primary dropdown-item dropdown-toggle display-4" href="page1.html" aria-expanded="false" data-toggle="dropdown-submenu">fase 1</a><div class="dropdown-menu dropdown-submenu"><a class="text-primary dropdown-item display-4" href="page1.html" aria-expanded="false">grafisch ontwerp</a><a class="text-primary dropdown-item display-4" href="page1.html" aria-expanded="false">tekenen</a></div></div><div class="dropdown"><a class="text-primary dropdown-item dropdown-toggle display-4" href="page1.html" aria-expanded="false" data-toggle="dropdown-submenu">fase 2</a><div class="dropdown-menu dropdown-submenu"><a class="text-primary dropdown-item display-4" href="page1.html" aria-expanded="false">grafisch ontwerp</a><a class="text-primary dropdown-item display-4" href="page1.html" aria-expanded="false">tekenen</a></div></div></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="page3.html" aria-expanded="false">CONTACT</a></li><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="https://mobirise.com">
                         </a>
                 </li></ul>
@@ -51,7 +51,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">create your own web page for free</a></section><section class="mbr-section form4 cid-r61gzoe0Mu" id="form4-2a">
+<section class="engine"><a href="https://mobiri.se/p">site templates free download</a></section><section class="mbr-section form4 cid-r61gzoe0Mu" id="form4-2a">
 
     
 
@@ -62,8 +62,7 @@
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJn6wOs6lZwokRLKy1iqRcoKw" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
-                <h2 class="pb-3 align-left mbr-fonts-style display-5">
-                    contact</h2>
+                <h2 class="pb-3 align-left mbr-fonts-style display-5">CONTACT</h2>
                 <div>
                     <div class="icon-block pb-3">
                         
